--- a/mokkozi_fe/src/assets/public.css
+++ b/mokkozi_fe/src/assets/public.css
@@ -1,28 +1,24 @@
 .profile { /* 1)상단 배경 이미지, 2)사용자 프로필 이미지, 3)사용자 인적사항을 포함한 프레임 */
   background-color: white;
-  border: 0.5px solid lightgrey; 
-  border-radius: 5px;
   position: relative;
   margin-bottom: 300px;
 }
 .bg-img { /* 상단 배경 이미지 */
   display: inline-block;
-  width: 100%;
-  height: 50%;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
+  width : 700px;
+  height : 250px;
   object-fit: cover;
 }
 .user-info {
   position: absolute;
-  top: 225px;
+  top: 227px;
   left: auto;
-  right: 278px;
+  right: 420px;
 }
 .user-follow {
   /* 사용자 프로필 이미지 프레임 */
   position: absolute;
-  top: 200px;
+  top: 190px;
   left: auto;
   right: 40px;
 }
@@ -34,7 +30,7 @@
   width: 150px;
   position: absolute;
   bottom: auto;
-  top: 12%;
+  top: 10%;
   left: 5%;
 }
 
@@ -49,7 +45,7 @@
   color: white;
   position: absolute;
   bottom: auto;
-  top: 21%;
+  top: 19%;
   right: auto;
   left: 150px;
   text-align: center;
