--- a/mokkozi_fe/src/assets/public.css
+++ b/mokkozi_fe/src/assets/public.css
@@ -1,19 +1,22 @@
-.profile { /* 1)상단 배경 이미지, 2)사용자 프로필 이미지, 3)사용자 인적사항을 포함한 프레임 */
+.profile {
+  /* 1)상단 배경 이미지, 2)사용자 프로필 이미지, 3)사용자 인적사항을 포함한 프레임 */
   background-color: white;
   position: relative;
   margin-bottom: 300px;
 }
-.bg-img { /* 상단 배경 이미지 */
+.bg-img {
+  /* 상단 배경 이미지 */
   display: inline-block;
-  width : 700px;
-  height : 250px;
+  width: 700px;
+  height: 250px;
   object-fit: cover;
 }
 .user-info {
   position: absolute;
-  top: 227px;
+  bottom: auto;
+  top: 225px;
   left: auto;
-  right: 243px;
+  right: 340px;
 }
 .user-follow {
   /* 사용자 프로필 이미지 프레임 */
@@ -24,7 +27,7 @@
 }
 .user-img-frame {
   /* 사용자 프로필 이미지 프레임 */
-  background-color: #F9F7F7;
+  background-color: #f9f7f7;
   border-radius: 100px;
   height: 150px;
   width: 150px;
@@ -34,10 +37,12 @@
   left: 5%;
 }
 
-.sub-frame { /* userImgFrame 내 sub프레임  ( 이미지의 absolute 배치 위해 ) */
+.sub-frame {
+  /* userImgFrame 내 sub프레임  ( 이미지의 absolute 배치 위해 ) */
   position: relative;
 }
-.user-img-mod-frame { /* 사용자 프로필 이미지 수정 버튼 프레임 */
+.user-img-mod-frame {
+  /* 사용자 프로필 이미지 수정 버튼 프레임 */
   display: inline-block;
   height: 30px;
   width: 30px;
@@ -58,28 +63,32 @@
   cursor: pointer;
 }
 #ex_file {
-  position: absolute; 
-  width: 20px; 
-  height: 20px; 
+  position: absolute;
+  width: 20px;
+  height: 20px;
   padding: 0;
   margin: -1px;
   overflow: hidden;
-  clip:rect(0,0,0,0); 
+  clip: rect(0, 0, 0, 0);
   border: 0;
 }
-.mod-sub-frame { /* 사용자 프로필 수정 버튼 내 sub 프레임( 배치 때문에 ) */ 
+.mod-sub-frame {
+  /* 사용자 프로필 수정 버튼 내 sub 프레임( 배치 때문에 ) */
   position: relative;
 }
-.user-img { /* 사용자 프로필 이미지 */
+.user-img {
+  /* 사용자 프로필 이미지 */
   display: inline-block;
   width: 100%;
   height: 50%;
   object-fit: cover;
 }
-.user-info { /* 사용자 인적사항 */
-  padding-left: 25px; 
+.user-info {
+  /* 사용자 인적사항 */
+  padding-left: 25px;
 }
-.header-font{ /* 각 부분 별 타이틀 폰트 */
+.header-font {
+  /* 각 부분 별 타이틀 폰트 */
   font-size: 20px;
   font-weight: bold;
   display: inline-block;
@@ -93,10 +102,12 @@
   height: 100%;
   overflow: auto;
 }
-.p-field * { /* 라벨 & 정보 입력창 (input 요소의 부모 요소) */
-    display: block;
+.p-field * {
+  /* 라벨 & 정보 입력창 (input 요소의 부모 요소) */
+  display: block;
 }
-.input-text { /* 정보 입력 창 */
+.input-text {
+  /* 정보 입력 창 */
   display: block;
   width: 100%;
 }
@@ -107,7 +118,8 @@
   width: 100%;
   height: 40px;
 }
-.calendar { /* 시작일, 종료일 설정하는 캘린더 */
+.calendar {
+  /* 시작일, 종료일 설정하는 캘린더 */
   width: 50%;
 }
 
@@ -126,21 +138,22 @@
 }
 
 .font {
-  font-family: 'Noto Sans', sans-serif;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans", sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
 }
 
 .font-test {
-  font-family: 'this_is_font_name'; 
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/SDSamliphopangche_Outline.woff') format('woff');
+  font-family: "this_is_font_name";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/SDSamliphopangche_Outline.woff")
+    format("woff");
   font-weight: normal;
-  font-style: normal; 
+  font-style: normal;
 }
 
 .follow-title {
-  border-bottom : 1px solid gainsboro;
+  border-bottom: 1px solid gainsboro;
   text-align: center;
   font-size: 16px;
   font-weight: 600;
-  padding: 10px
+  padding: 10px;
 }
