--- a/mokkozi_fe/src/assets/public.css
+++ b/mokkozi_fe/src/assets/public.css
@@ -19,7 +19,6 @@
   right: 240px;
 }
 .user-follow {
-  /* 사용자 프로필 이미지 프레임 */
   position: absolute;
   bottom: auto;
   top: 210px;
@@ -29,8 +28,8 @@
 .user-img-frame {
   /* 사용자 프로필 이미지 프레임 */
   background-color: #f9f7f7;
-  border-radius: 100px;
-  height: 150px;
+  border-radius: 200px;
+  height: 145px;
   width: 150px;
   position: absolute;
   bottom: auto;
@@ -80,10 +79,9 @@
 }
 .user-img {
   /* 사용자 프로필 이미지 */
-  display: inline-block;
-  width: 100%;
-  height: 50%;
-  object-fit: cover;
+
+  width: 150px;
+  height: 145px;
 }
 .user-info {
   /* 사용자 인적사항 */
